#2827 Fix resource title overflow "break-word" is deprecated

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2765,7 +2765,8 @@ span.you-flag {
 .resource-custom-table tbody td {
 	border-bottom: 1px solid #EEE;
 	padding: 8px 10px;
-	word-break: break-word;
+	word-break: keep-all;
+	word-wrap: anywhere;
 }
 
 .resource-custom-table thead th {
